# dbt-core

./: .bumpversion.cfg  .changie.yaml  .git-blame-ignore-revs  .pre-commit-config.yaml  0-21-0-schema.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  ]  azure-pipelines.yml  converter.py  dev-requirements.txt  dev_requirements.txt  docker-compose.yml  editable-requirements.txt  event.json  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test.env.sample  tox.ini
.cargo/: config
.changes/: 0.0.0.md  1.0.1.md  1.0.99.md  1.1.0-b1.md  README.md  header.tpl.md
.changes/1.1.0/: Breaking Changes-20220316-031311.yaml  Features-20220309-142645.yaml  Features-20220321-140046.yaml  Features-20220321-140306.yaml  Features-20220322-144822.yaml  Fixes-20220317-132418.yaml  Fixes-20220317-163051.yaml  Fixes-20220321-140833.yaml  Fixes-20220321-140921.yaml  Under the Hood-20220218-161319.yaml  Under the Hood-20220315-155436.yaml  Under the Hood-20220316-100305.yaml  Under the Hood-20220321-141158.yaml  Under the Hood-20220321-141451.yaml  (+4 more)
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
core/: MANIFEST.in  README.md  cli.py  setup.py
core/dbt/: main.py  (+13 more)
dbt/: compilation.py  config.py
docker/: Dockerfile  Dockerfile.0.16.1  README.md
performance/: README.md
rust/tracking/: Cargo.toml  setup.py
rust/tracking/src/: lib.rs
scripts/: build-dist.sh  check-libyaml.py  collect-artifact-schema.py  dtr.py  werkzeug-refresh-token.py
test/: setup.sh  setup_db.sh
(+2660 files in other folders)
